Mon Apr 29 17:02:44 1996  Ken Raeburn  <raeburn@cygnus.com>

	Merge with Cygnus sources, changes from Mark Eichin, Marc
	Horowitz, Chris Provenzano and me:

	* Makefile.in (install): Install correct set of man pages, and
	check for failures.
	* kshd.M, klogind.M: Renamed from kr*.M versions.
	* login.M: New file. Man page for login with some description of
	new features.

	* rlogin.M: Remove references to using program with target
	hostname as argv[0].
	* rsh.M: Ditto.  Also document -f, -F, -x options.

	* login.c: Massive changes.  Split much functionality out of main
	and into separate file sections: terminal flag settings, Kerberos
	4 and 5 support, UNIX password support, mail check, signal handler
	handling, some other support routines.  Revamp controlling tty and
	process group handling.  For AFS configuration, use setpag and run
	aklog.  Try validating password using krb5.  Always set tty flags,
	not just for rlogin session.  When validating tickets, treat an
	existing key file that doesn't contain the key we think we want
	(possibly because DNS was spoofed) as an error condition.
	* Makefile.in (LOGINLIBS): List libkrb524.a here.
	(LIBOBJS): Not here.
	(login.krb5): Reverse the order of LIBOBJS and LOGINLIBS.
	* configure.in: Check for --with-afs.  Add AFS libs and define
	SETPAG if supplied.

	* login.c (KRB5_GET_TICKETS, KRB4_GET_TICKETS, KRB_RUN_AKLOG): new
	macros selecting single signon options.  krb5.conf profile support
	for control over authentication options, above the compile time
	selection.
	(conf_affirmative): new function, recognize yes/no in profile
	value.
	(login_get_kconf): new function, look for all [login] flags and
	set them in appropriate globals (via login_conf_set array.)
	(main, sleepexit, destroy_tickets): Check the new login_* flags.
	(main): rename KRB4_USE_524 to KRB4_CONVERT.

	* configure.in: Added checks for tcsetpgrp, tcgetpgrp, setpgid.
	* krlogind.c (control): Use tcgetpgrp if it's available.
